--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "ngx-perfect-scrollbar": "^10.1.1",
     "perfect-scrollbar": "^1.5.5",
     "rxjs": "~7.5.0",
